--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200&family=Lora&display=swap"
+      rel="stylesheet"
+    />
     <title>Página pessoal</title>
   </head>
   <body>
@@ -48,7 +54,7 @@
           possível de casa.
         </p>
 
-        <h3 class="titulo" id="experiencia">Experiência</h3>
+        <h3 class="titulo font--titulo" id="experiencia">Experiência</h3>
         <ul>
           <li class="fonte--media">
             2016 até 2022: Uma virada para pratos orientais, principalmente
@@ -63,7 +69,7 @@
           </li>
         </ul>
 
-        <h3 class="titulo" id="portifolio">Portfólio</h3>
+        <h3 class="titulo fonte--titulo" id="portifolio">Portfólio</h3>
         <div class="fotos">
           <img
             src="https://i.pinimg.com/564x/42/1c/f6/421cf633a225f8ce896456d757b38218.jpg"
@@ -83,8 +89,8 @@
           />
         </div>
 
-        <h3 class="titulo" id="contato">Contato</h3>
-        <p><i class="fas fa-phone-alt pr4"></i> +55 12 991 000 999</p>
+        <h3 class="titulo fonte--titulo" id="contato">Contato</h3>
+        <p><i class="fa-solid fa-phone"></i> +55 12 991 000 999</p>
         <p><i class="fab fa-whatsapp pr4"></i> +55 12 991 000 999</p>
         <p><i class="far fa-envelope-open pr4"></i> chef@roger.br</p>
         <p><i class="fas fa-globe pr4"></i> https://roger.br</p>
@@ -112,6 +118,7 @@
           </p>
         </div>
       </div>
+      <div class="btn-inicio"><a href="#inicio"</div>
     </div>
   </body>
 </html>
