--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
           </p>
         </div>
       </div>
-      <div class="btn-inicio"><a href="#inicio"</div>
+      <div class="btn-inicio">
+        <a href="#inicio"></a>
+      </div>
     </div>
   </body>
 </html>
