adiciona o botão para navegar ao topo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200&family=Lora&display=swap"
       rel="stylesheet"
     />
+    <!-- Ícones-->
+    <link
+      class="fonte--grande"
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <title>Página pessoal</title>
   </head>
   <body>
@@ -27,6 +35,7 @@
       </div>
 
       <div class="conteudo">
+        <a name="inicio"></a>
         <div class="navigation">
           <ul>
             <li><a href="#experiencia">Experiência</a></li>
@@ -90,7 +99,7 @@
         </div>
 
         <h3 class="titulo fonte--titulo" id="contato">Contato</h3>
-        <p><i class="fa-solid fa-phone"></i> +55 12 991 000 999</p>
+        <p><i class="fas fa-phone-alt pr4"></i> +55 12 991 000 999</p>
         <p><i class="fab fa-whatsapp pr4"></i> +55 12 991 000 999</p>
         <p><i class="far fa-envelope-open pr4"></i> chef@roger.br</p>
         <p><i class="fas fa-globe pr4"></i> https://roger.br</p>
@@ -119,7 +128,7 @@
         </div>
       </div>
       <div class="btn-inicio">
-        <a href="#inicio"></a>
+        <a href="#inicio"> <i class="fas fa-angle-up"></i></a>
       </div>
     </div>
   </body>
