--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <title>Página pessoal</title>
   </head>
   <body>
+    <span class="logotipo"><i class="far fa-registered"></i></span>
+    <div class="logomarca fundo"></div>
     <div class="background">
       <div class="cabecalho">
         <figure class="logo">
