--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="background">
       <div class="cabecalho">
         <figure class="logo">
-          <img src="img/eco-food.png" alt="" />
+          <img class="imgprato" src="img/eco-food.png" alt="" />
         </figure>
         <h1 class="fonte--grande">sou Roger Camargo</h1>
         <h2 class="subtitle--color fonte--media">
@@ -83,18 +83,22 @@
         <h3 class="titulo fonte--titulo" id="portifolio">Portfólio</h3>
         <div class="fotos">
           <img
+            class="portfotos"
             src="https://i.pinimg.com/564x/42/1c/f6/421cf633a225f8ce896456d757b38218.jpg"
             alt=""
           />
           <img
+            class="portfotos"
             src="https://i.pinimg.com/564x/a3/cb/e3/a3cbe3639c1f8ed1e5136c3834d1be75.jpg"
             alt=""
           />
           <img
+            class="portfotos"
             src="https://i.pinimg.com/564x/2c/66/7c/2c667c006022d9178192b5e742a1a363.jpg"
             alt=""
           />
           <img
+            class="portfotos"
             src="https://i.pinimg.com/564x/9b/d6/1f/9bd61f267ba64e482c68a2a9599ddf50.jpg"
             alt=""
           />
