removi a margem do cabeçalho

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <div class="footer">
       <h4>©️ Roger Camargo | Dev Pro | 2022</h4>
-      <p>
+      <p class="iconfooter">
         <a href="https://github.com/huogerac/minhalandingpage" target="blank">
           <i class="pa2 fab fa-github-alt"></i>
         </a>
