corrigi o cod pelo do roger

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="background">
       <div class="cabecalho">
         <figure class="logo">
-          <img class="imgprato" src="img/eco-food.png" alt="" />
+          <img src="img/eco-food.png" alt="" />
         </figure>
         <h1 class="fonte--grande">sou Roger Camargo</h1>
         <h2 class="subtitle--color fonte--media">
@@ -36,8 +36,9 @@
         </h2>
       </div>
 
+      <a name="inicio"></a>
+
       <div class="conteudo">
-        <a name="inicio"></a>
         <div class="navigation">
           <ul>
             <li><a href="#experiencia">Experiência</a></li>
@@ -65,19 +66,17 @@
           possível de casa.
         </p>
 
-        <h3 class="titulo font--titulo" id="experiencia">Experiência</h3>
-        <ul>
-          <li class="fonte--media">
+        <h3 class="titulo font--titulo" id="experiencia">Experiências</h3>
+        <ul class="titulo titulo--fonte">
+          <li>
             2016 até 2022: Uma virada para pratos orientais, principalmente
             culinária Tailandesa
           </li>
-          <li class="fonte--media">
+          <li>
             2011 até 2015: Especializado na culinária Italiana e pratos do Norte
             do Brasil
           </li>
-          <li class="fonte--media">
-            2000 até 2010: Pratos típicos da culinária brasileira
-          </li>
+          <li>2000 até 2010: Pratos típicos da culinária brasileira</li>
         </ul>
 
         <h3 class="titulo fonte--titulo" id="portifolio">Portfólio</h3>
@@ -118,9 +117,7 @@
           <i class="fas fa-globe pr4"></i> https://roger.br
         </p>
 
-        <h3 class="titulo" class="titulo titulo--fonte" id="habilidades">
-          Habilidades
-        </h3>
+        <h3 class="titulo titulo--fonte" id="habilidades">Habilidades</h3>
 
         <div class="habilidades">
           <p class="fonte--media">
