--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
           target="blank"
         >
           <i class="pa2 fas fa-book"></i>
+          oiii
         </a>
       </p>
     </div>
